--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
+dotenv = "0.15.0"
 sqlx = { version = "0.8", features = [
     "runtime-tokio",
     "tls-native-tls",
