--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rand_core = { version = "0.6", features = ["std"] }
 bigdecimal = "0.4.5"
 actix-web = "4.9.0"
 serde = "1.0.210"
+serde_json = "1.0.128"
 
 [dependencies.uuid]
 version = "1.10.0"
