--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ bigdecimal = "0.4.5"
 actix-web = "4.9.0"
 serde = "1.0.210"
 serde_json = "1.0.128"
+actix-cors = "0.7.0"
 
 [dependencies.uuid]
 version = "1.10.0"
