--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = "1.0.210"
 serde_json = "1.0.128"
 actix-cors = "0.7.0"
 jsonwebtoken = "9.3.0"
+actix-web-httpauth = "0.8.2"
 
 [dependencies.uuid]
 version = "1.10.0"
